Add Error page when login is unsuccessful. Add Users and Roles from mySql db using spring mysql connector. Add localization to view pages and JS dialog windows

--- a/35-springboot-thymeleafdemo-employees-list-db-security/src/main/java/resourceBundle/messages.properties
+++ b/35-springboot-thymeleafdemo-employees-list-db-security/src/main/java/resourceBundle/messages.properties
@@ -5,12 +5,13 @@ label.email=Email
 label.action=Action
 label.goback=Go back to list
 
-label.enter.first=**Please enter first name
-label.enter.last=**Please enter last name
-label.enter.email=**Please enter email address
+label.error.first=**Please enter first name
+label.error.last=**Please enter last name
+label.error.email=**Please enter email address
 
 label.add.employee=Add new employee
 label.confirm=Please confirm if you want to delete: 
+label.confirm.logout=Do you want to logout?
 label.delete=Delete
 label.update=Update
 label.reset=Reset
@@ -19,3 +20,5 @@ label.login=Login
 label.logout=Log out
 label.password=Password
 label.username=Username
+label.access.denied=The user <strong>{0}</strong> does not have access to the resource.
+
